force-app/main/default/objects/RateTemplate__c/RateTemplate__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per la determinazione di Rete Category e Contract Template nella funzionalità di configurazione offerta tecnica</description>
    <label>Rate Template</label>
    <nameField>
        <label>Rate Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>