force-app/main/default/objects/RateTemplate__c/fields/ContractTemplate__c.field-meta.xml
<CustomField>
    <fullName>ContractTemplate__c</fullName>
    <description>Campo di configurazione usato per contenere i possibili Contract Template da usare durante la funzionalità di Configurazione Offerta Tecnica</description>
    <label>Template Contratto </label>
    <length>255</length>
    <type>Text</type>
</CustomField>