force-app/main/default/objects/RateTemplate__c/fields/RateCategory__c.field-meta.xml
<CustomField>
    <fullName>RateCategory__c</fullName>
    <description>Campo di configurazione usato per l&apos;individuazione del Contract Template da usare durante la funzionalità di Configurazione Offerta Tecnica</description>
    <label>Rate Category </label>
    <length>255</length>
    <type>Text</type>
</CustomField>