force-app/main/default/objects/RateTemplate__c/fields/ServiceProduct__c.field-meta.xml
<CustomField>
    <fullName>ServiceProduct__c</fullName>
    <label>Prodotto di servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>