force-app/main/default/objects/RateTemplate__c/fields/Visibile__c.field-meta.xml
<CustomField>
    <fullName>Visibile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibile</label>
    <type>Checkbox</type>
</CustomField>